Tests/Bad/reserved_declare.min
function main;
beginparams
endparams
beginlocals
	continue : integer;
endlocals
beginbody
	continue := 3;
	write continue;
 endbody
